Slight organization changes Create a global variable RZ for the application Create a game function to simplify initializing the application

--- a/zelda.html
+++ b/zelda.html
@@ -4,8 +4,7 @@
     <script type='text/javascript' src='mapGenerator.js'></script>
     <script type="text/javascript">
     window.onload = function() {
-        var mapElement = document.getElementById('map');
-        drawGraph(mapElement, mapElement.offsetWidth, mapElement.offsetHeight);
+        var game = new RZ.Game('map'); // Match the parameter to the canvas id 
     };
     </script>
 <head>
