Rename javascript file

--- a/zelda.html
+++ b/zelda.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Random Zelda</title>
-    <script type='text/javascript' src='mapGenerator.js'></script>
+    <script type='text/javascript' src='game.js'></script>
     <script type="text/javascript">
     window.onload = function() {
         var game = new RZ.Game('map'); // Match the parameter to the canvas id 
