--- a/zelda.html
+++ b/zelda.html
@@ -7,7 +7,7 @@
         var game = new RZ.Game('map'); // Match the parameter to the canvas id 
     };
     </script>
-<head>
+</head>
 <body>
     <canvas id='map' width='600px' height='600px' style='background: #ea9e22;'>
         <p>The current browser does not support the canvas element.</p>
