--- a/randomzelda.html
+++ b/randomzelda.html
@@ -1,11 +1,11 @@
 <html>
 <head>
     <title>Random Zelda</title>
-    <script type='text/javascript' src='game.js'></script>
+    <script type='text/javascript' src='dist/randomzelda.js'></script>
     <script type="text/javascript">
-    window.onload = function() {
-        var game = new RZ.Game('map'); // Match the parameter to the canvas id 
-    };
+        window.onload = function() {
+            var game = new RZ.Game('map'); // Match the parameter to the canvas id 
+        };
     </script>
 </head>
 <body>
