--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <script type='text/javascript' src='dist/randomzelda.js'></script>
     <script type='text/javascript'>
         window.onload = function() {
-            RZ.Game.init('main'); // Match the parameter to the canvas id 
+            var gameObjects = RZ.Game.init('main'); // Match the parameter to the canvas id 
+            RZ.Game.run(gameObjects);
         };
     </script>
 </head>
