Add screen transition for map
Display a screen transition when you toggle the map
Add a container div to hide the overflow of canvases that are positioned
out of the desired viewport
Add a lock property to prevent toggling the map before the screen
transition finishes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     </script>
 </head>
 <body>
-    <canvas id='main' width='768px' height='720px'>
-        <p>The current browser does not support the canvas element.</p>
-    </canvas>
+    <div id='main'></div>
 </body>
 </html>
